Got cross origin calls working

--- a/editor/CorePDF.Editor.Presentation/src/app/components/build-information.component.html
+++ b/editor/CorePDF.Editor.Presentation/src/app/components/build-information.component.html
@@ -1,3 +1,3 @@
-﻿<div id="build-info" *ngIf="model.EnvironmentName != 'Production'">
-    <p>Application Version: {{model.ApplicationVersion}}</p>
+﻿<div id="build-info">
+    <p>Application Version: {{model.applicationVersion}}</p>
 </div>
