--- a/editor/CorePDF.Editor.Presentation/src/app/components/editor.component.less
+++ b/editor/CorePDF.Editor.Presentation/src/app/components/editor.component.less
@@ -1,1 +1,39 @@
-// This is where the styling will go
+form {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 50%;
+    display: flex;
+    flex-direction: column;
+    
+    .editregion {
+        display: flex;
+        flex-grow: 1;
+        width: 100%;
+        height: 100%;
+    }
+
+    textarea {
+        flex-grow: 1;
+        padding: 5px;
+    }
+    
+    button {
+        
+    }
+}
+
+.preview {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+
+    iframe {
+        width: 100%;
+        height: 100%;
+    }
+}
+
