--- a/editor/CorePDF.Editor.Presentation/src/app/components/editor.component.html
+++ b/editor/CorePDF.Editor.Presentation/src/app/components/editor.component.html
@@ -9,8 +9,8 @@
 
     <form [formGroup]="pageForm" autocomplete="off">
         <div class="controls">
-            <button type="button" (click)="newDocument($event)"><span class="fa fa-new"></span>New Document</button>
-            <button type="button" (click)="newDocument($event)"><span class="fa fa-new"></span>Preview</button>
+            <button type="button" (click)="newDocument($event)"><span class="fa fa-plus" aria-hidden="true"></span>New Document</button>
+            <button type="button" (click)="previewDocument($event)"><span class="fa fa-file-pdf-o" aria-hidden="true"></span>Preview</button>
         </div>
         <div class="editregion">
             <textarea formControlName="DocumentJSON" id="documentData" name="documentData" autofocus="autofocus"></textarea>
@@ -18,6 +18,6 @@
     </form>
 
     <div class="preview">
-        <iframe src="https://research.google.com/pubs/archive/44678.pdf"></iframe>
+        <iframe [src]="pdf"></iframe>
     </div>
 </div>
